<resources>
    <string name="app_name">MasterKey</string>
    <string name="logout">Logout</string>
    <string name="add_account_details">Add Account Details</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_vendor_name">Enter Vendor Name</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_login">User Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="user_registration">User Registration</string>
    <string name="welcome">Welcome !! You have Registered Sucessfully \n\nPlease tell us something more about yourself</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_mobile_no">Enter Mobile No</string>
    <string name="save_details">Save Details</string>
    <string name="view_records">View Records</string>
</resources>
