<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bhavesh.masterkey.AddAccount">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:id="@+id/editText8"
        android:hint="@string/enter_username" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="19dp"
        android:id="@+id/editText10"
        android:layout_below="@+id/editText9"
        android:layout_alignStart="@+id/editText9"
        android:hint="@string/enter_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText11"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/editText10"
        android:layout_alignStart="@+id/editText10"
        android:hint="@string/enter_vendor_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_marginTop="13dp"
        android:id="@+id/editText9"
        android:hint="@string/enter_email"
        android:layout_below="@+id/editText8"
        android:layout_alignStart="@+id/editText8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/textView4"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:text="@string/add_account_details" />

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:id="@+id/button6"
        android:layout_below="@+id/editText11"
        android:layout_alignStart="@+id/textView4" />

    <Button
        android:text="@string/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button7"
        android:layout_alignBaseline="@+id/button6"
        android:layout_alignBottom="@+id/button6"
        android:layout_alignEnd="@+id/textView4" />

    <Button
        android:text="@string/view_records"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/button5" />
</RelativeLayout>
