<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bhavesh.masterkey.Registration">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:id="@+id/button3"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText7"
        android:hint="@string/confirm_password"
        android:layout_above="@+id/button3"
        android:layout_alignStart="@+id/editText4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText6"
        android:hint="Password"
        android:layout_above="@+id/editText7"
        android:layout_alignStart="@+id/editText7"
        android:layout_marginBottom="17dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText4"
        android:hint="Email"
        android:layout_above="@+id/editText6"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp" />

    <TextView
        android:text="@string/user_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:id="@+id/textView2" />

</RelativeLayout>
